<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/vNotch"
        android:layout_height="15dp"
        android:background="@drawable/edgy_notch_shape" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnOSSLicenses"
        android:layout_below="@id/vNotch"
        android:layout_marginTop="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvLicenseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp" />


        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnOSSLicenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Source Licenses"
        app:backgroundTint="@color/elastic_agent_gray"
        android:textColor="@android:color/white"
        android:layout_above="@+id/btnBack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:backgroundTint="@color/elastic_agent_gray"
        android:textColor="@android:color/white"
        android:layout_above="@+id/ivAgentStatusIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/ivAgentStatusIcon"
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/icon" />
</RelativeLayout>
