...
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">



            <TextView
                android:id="@+id/tvLegalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp" />


...
