...
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tvVersionHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Version and Legal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_below="@id/tvAdminInfo"
                android:layout_marginBottom="8dp"/>

            <TextView
...
